<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnSpan="3"
        android:gravity="bottom"
        android:orientation="horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_5"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_6"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_7"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_8"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_9"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_0"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_a_beautiful_sunset"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/png_transparent_yellow_sky_dusk_sky_clouds"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>